add auther gard add cart service edit signup terms input validation

--- a/src/app/shell/footer/footer.component.html
+++ b/src/app/shell/footer/footer.component.html
@@ -1,16 +1,16 @@
 <footer class="">
 
     
-    <div class="footer-content container-fluid">
+    <div class="footer-content container-fluid py-3">
 
-        <div class="container  py-4">
+        <div class="container">
 
 
             <div class="row">
 
    
        <!------------------- SHOPPING GUIDE ------------------>
-                <div class="col-lg-3 col-md-6 mt-2">
+                <!-- <div class="col-lg-3 col-md-6 mt-2">
                     <div class="py-3 px-3 shop-section shadow">
                         <h5 class="fontsize mb-3 text-mainColor ">SHOPPING GUIDE</h5>
                         <ul class="list-unstyled ml-4">
@@ -31,13 +31,13 @@
                                 Return policy</li>
                         </ul>                
                     </div>
-                </div>      
+                </div>       -->
 
 
 
 
         <!------------------------ LINKS ----------------------------->
-                <div class="col-lg-3 col-md-6 mt-2">
+                <div class="col-lg-4 col-md-6 mt-2">
                     <div  class="py-3 px-3 shop-section shadow">
                         <h5 class="fontsize mb-3 text-mainColor">USEFUL LINKS</h5>
                         <ul class="list-unstyled ml-4">
@@ -65,7 +65,7 @@
 
 
         <!------------------------ NewsLetter form ----------------------------->
-                <div class="col-lg-6 col-md-12">
+                <div class="col-lg-7 offset-1 col-md-12">
                     <div class="p-4">
                         <h3 class="fontsize mb-2 text-white">SIGN UP FOR NEWSLETTER</h3>
                         <div class="row">
