--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -25,7 +25,7 @@
                           <div class="border-bottom rounded   d-flex" >
                               <span><i class="far fa-user text-white  mx-5 mt-1 "></i></span> 
                     
-                              <input type="text" placeholder="Enter first name" class="form-control  border-0" 
+                              <input type="text" autocomplete="off" placeholder="Enter first name" class="form-control  border-0" 
                               [class.is-valid]="signUpForm.get('first_name').errors == null && signUpForm.get('first_name').touched "
                               formControlName='first_name' [(ngModel)]="userObj.first_name">
                           </div>
@@ -37,18 +37,13 @@
 
                        
                       <div class="form-group">
-                        <!-- <label for="exampleInputEmail1">Email address</label> -->
                         <div class="border-bottom rounded   d-flex" >
                             <span><i class="far fa-user text-white  mx-5 mt-1"></i></span>
-                            
-                  
                             <input type="text" placeholder="Enter last name" class="form-control  border-0" id="exampleInputPassword1"
                             [class.is-valid]="signUpForm.get('last_name').errors == null && signUpForm.get('last_name').touched "
                             formControlName='last_name' [(ngModel)]="userObj.last_name">
                         </div>
-                        <div class="alert alert-danger" role="alert"
-                                *ngIf="signUpForm.get('last_name').errors != null && signUpForm.get('last_name').touched">
-                                Enter Valid Last Name
+                        <div class="alert alert-danger" role="alert" *ngIf="signUpForm.get('last_name').errors != null && signUpForm.get('last_name').touched"> Enter Valid Last Name
                             </div>
                         
                     </div>    
@@ -60,7 +55,6 @@
                             <a  class="bg-transparent w-100" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="text-white">
                                <span  class="ml-3 pb-2">
                             Select City : {{cityName}}
-                          
                              </span>
                             </a>
                             <div class="dropdown-menu bg-mainColor w-100" aria-labelledby="dropdownMenuButton">
@@ -71,11 +65,12 @@
                           </div>
 
 
+
+
                           </div>
                       </div>
                 
                   <div class="form-group">
-                      <!-- <label for="exampleInputEmail1">Email address</label> -->
                       <div class="border-bottom rounded  d-flex" >
                         <span><i class="fas fa-mobile-alt text-white mx-5 mt-1 "></i></span>        
                           <input type="" placeholder="(+966) saudi Arabia" class="form-control border-0" id="exampleInputPassword1"
@@ -89,7 +84,6 @@
                   </div>
                       
                       <div class="form-group">
-                          <!-- <label for="exampleInputEmail1">Email address</label> -->
                           <div class="border-bottom rounded d-flex" >
                                <span><i class="far fa-envelope text-white  mx-5 mt-1 "></i></span>  
                                                       
@@ -97,9 +91,7 @@
                               [class.is-valid]="signUpForm.get('email').errors == null && signUpForm.get('email').touched "
                               formControlName='email'  [(ngModel)]="userObj.email">
                           </div>
-                          <div class="alert alert-danger" role="alert"
-                                *ngIf="signUpForm.get('email').errors != null && signUpForm.get('email').touched">
-                                Enter Valid Email
+                          <div class="alert alert-danger" role="alert" *ngIf="signUpForm.get('email').errors != null && signUpForm.get('email').touched"> Enter Valid Email
                             </div>
                       </div>
                 
@@ -120,14 +112,18 @@
                       
   
                       <div class="form-check mt-2 ml-4">
-                          <input type="checkbox" class="form-check-input mt-1" id="exampleCheck1">
+                          <input type="checkbox" class="form-check-input mt-1" id="exampleCheck1" [class.is-valid]="signUpForm.get('city').errors == null && signUpForm.get('city').touched "
+                          formControlName='city' >
                           <label class="login form-check-label ml-3 text-white" for="exampleCheck1" (click)="routeToTermsPage() ">Privacy Policy & Terms of Service</label>
                      </div>
+
+
                      <div class="ml-5">
                       <button type="submit" (click)="createAllUser()"  [disabled]='signUpForm.invalid' class="btn text-white bg-mainColor mt-4 mb-4">sign up</button>
                       <p class="text-center text-white">Already have an account? 
                            <span class="border-bottom text-white login  font-weight-bold" (click)="routeToLogin()">
-                               Log in</span>
+                                Log in
+                           </span>
                             </p>
                      </div>
                   </form>
@@ -144,3 +140,5 @@
   
       </div>
     </div>
+
+
