--- a/src/app/pages/companyinfo/companyinfo.component.html
+++ b/src/app/pages/companyinfo/companyinfo.component.html
@@ -109,11 +109,11 @@
 
                                                         <div class="file-upload">
                                                             <input type="file" (change)="savePdf($event,'file')" type="file" />
-                                                            <i class="fa fa-arrow-up"></i>
+                                                            <!-- <i class="fa fa-arrow-up"></i> -->
                                                         </div>
 
                                                         <!-- <p *ngIf="registerForm.get('cvFormData').errors != null && registerForm.get('cvFormData').touched" class="py-2 ml-3 text-danger">This field is required</p> -->
-                                                        <p class="py-2 ml-3 text-success">{{fileName}}</p>
+                                                        <!-- <p class="py-2 ml-3 text-success">{{fileName}}</p> -->
 
                                                     </div>
 
