--- a/src/app/pages/confirminfo/confirminfo.component.html
+++ b/src/app/pages/confirminfo/confirminfo.component.html
@@ -1,1 +1,17 @@
-<p>confirminfo works!</p>
+<section>
+    <div class="container py-5">
+        <div class="row">
+            <div class="col-md-6 mx-auto text-center">
+                <div>
+                    <p class="confirm"><span class="text-mainColor">This page is for products that are included in your
+                            contract.</span> Please create your own account and follow the necessary steps to establish
+                        your contract and follow up on your requests</p>
+                    <button class="btn btn-lg bg-mainColor text-white" (click)="getTerms()"> confirm </button>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+</section>
+
