--- a/src/app/pages/terms/terms.component.scss
+++ b/src/app/pages/terms/terms.component.scss
@@ -2,6 +2,15 @@
 @import '../../../styles.scss';
 
 
-.handIcon{
-    font-size: 200px;
+// .handIcon{
+//     font-size: 200px;
+// }
+
+.line{
+    width: 140px;
+    margin: 5px auto;
+    padding: 1px 0;
+    background-color: $mainColor;
 }
+
+
