--- a/src/app/shell/footer/footer.component.html
+++ b/src/app/shell/footer/footer.component.html
@@ -33,36 +33,18 @@
                     </div>
                 </div>       -->
 
-
-
-
         <!------------------------ LINKS ----------------------------->
                 <div class="col-lg-4 col-md-6 mt-2">
                     <div  class="py-3 px-3 shop-section shadow">
                         <h5 class="fontsize mb-3 text-mainColor">USEFUL LINKS</h5>
                         <ul class="list-unstyled ml-4">
-                            <li class="mt-2">
+                            <li class="mt-3" *ngFor="let term of termList" (click)="routeTOTerm()">
                                 <i class="fas fa-chevron-right"></i>
-                                About Us </li>
-                            <li class="mt-2">
-                                <i class="fas fa-chevron-right"></i>
-                                Terms & conditions</li>
-                            <li class="mt-2">
-                                <i class="fas fa-chevron-right"></i>
-                                Privacy Policy</li>
-                            <li class="mt-2">
-                                <i class="fas fa-chevron-right"></i>
-                                Contact Us</li>
-                            
+                               {{term.en_page_title}}</li>
                         </ul>
                     </div>
 
                 </div>
-
-
-
-  
-
 
         <!------------------------ NewsLetter form ----------------------------->
                 <div class="col-lg-7 offset-1 col-md-12">
@@ -92,13 +74,8 @@
                         </div>
                     </div>
                 </div>
-
+                
             </div>
-
-            <!------------------------copyright----------------------------->
-
-
-
 
             </div>
 
@@ -114,7 +91,6 @@
                 
             </div>
 
-             <!------------------------end copyright----------------------------->
 
             </div>
 
